--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,11 +15,11 @@ jobs:
 
       - name: Build and Push Docker Images
         run: |
-          docker build -t frontend ./frontend/my-react-app
-          docker build -t backend ./backend
-          docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-          docker push frontend
-          docker push backend
+          docker build -t my-frontend-image ./frontend/my-react-app
+          docker build -t my-backend-image ./backend
+          echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+          docker push my-frontend-image
+          docker push my-backend-image
 
       - name: Deploy with Docker Compose
         run: |
