--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,11 +15,11 @@ jobs:
 
       - name: Build and Push Docker Images
         run: |
-          docker build -t frontend ./frontend/my-react-app
-          docker build -t backend ./backend
+          docker build -t frontend:latest ./frontend/my-react-app
+          docker build -t backend:latest ./backend
           echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-          docker push frontend
-          docker push backend
+          docker push frontend:latest
+          docker push backend:latest
 
       - name: Deploy with Docker Compose
         run: |
