--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
           docker build -t backend:latest ./backend
           echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
           docker push henrikmoe/frontend:latest
-          docker push henrikmoe/backend:tagname
+          docker push henrikmoe/backend:latest
 
       - name: Deploy with Docker Compose
         run: |
