--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,8 +18,8 @@ jobs:
           docker build -t frontend:latest ./frontend/my-react-app
           docker build -t backend:latest ./backend
           echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-          docker push henrikmoe/frontend:latest
-          docker push henrikmoe/backend:latest
+          docker push frontend:latest
+          docker push backend:latest
 
       - name: Deploy with Docker Compose
         run: |
