--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,8 +15,8 @@ jobs:
 
       - name: Build and Push Docker Images
         run: |
-          docker build -t frontend ./frontend/my-react-app
-          docker build -t backend ./backend
+          docker build -t henrikmoe/frontend ./frontend/my-react-app
+          docker build -t henrikmoe/backend ./backend
           echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
           docker push henrikmoe/frontend
           docker push henrikmoe/backend
