--- a/frontend/my-react-app/package.json
+++ b/frontend/my-react-app/package.json
@@ -12,8 +12,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "PORT=80 react-scripts start",
-    "build": "PORT=80 react-scripts build",
+    "start": "react-scripts start --port 80",
+    "build": "react-scripts build --port 80",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
