--- a/frontend/my-react-app/package.json
+++ b/frontend/my-react-app/package.json
@@ -9,9 +9,11 @@
     "@testing-library/user-event": "^13.5.0",
     "dotenv": "^16.3.1",
     "fs": "^0.0.1-security",
+    "i18next": "^23.5.1",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.3.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
