--- a/frontend/my-react-app/package.json
+++ b/frontend/my-react-app/package.json
@@ -16,7 +16,8 @@
     "react-i18next": "^13.3.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "NODE_ENV=development react-scripts start",
