parent update component added

--- a/frontend/my-react-app/public/manifest.json
+++ b/frontend/my-react-app/public/manifest.json
@@ -8,7 +8,7 @@
       "type": "image/x-icon"
     },
     {
-      "src": "preview.png",
+      "src": "preview0.png",
       "type": "image/png",
       "sizes": "192x192"
     },
