--- a/frontend/my-react-app/public/manifest.json
+++ b/frontend/my-react-app/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Jinsei.ai | Global Standards Based Report Processes",
-  "name": "Create React App Sample",
+  "short_name": "Jinsei.ai",
+  "name": "Jinsei.ai | Global Standards Based Report Processes",
   "icons": [
     {
       "src": "favicon.png",
