--- a/frontend/my-react-app/package.json
+++ b/frontend/my-react-app/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@chatscope/chat-ui-kit-react": "^1.10.1",
     "@react-oauth/google": "^0.11.1",
+    "@react-spring/web": "^9.7.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
