--- a/frontend/my-react-app/package.json
+++ b/frontend/my-react-app/package.json
@@ -9,7 +9,6 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@babel/plugin-proposal-private-property-in-object": "^1.0.0",
     "axios": "^1.6.1",
     "dotenv": "^16.3.1",
     "fs": "^0.0.1-security",
@@ -48,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
