--- a/frontend/my-react-app/package.json
+++ b/frontend/my-react-app/package.json
@@ -13,10 +13,13 @@
     "dotenv": "^16.3.1",
     "fs": "^0.0.1-security",
     "i18next": "^23.5.1",
+    "konva": "^9.3.0",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.3.0",
+    "react-konva": "^18.2.10",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-syntax-highlighter": "^15.5.0",
