--- a/frontend/my-react-app/package.json
+++ b/frontend/my-react-app/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.3.1",
     "fs": "^0.0.1-security",
     "i18next": "^23.5.1",
+    "konva": "^9.3.0",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
