--- a/frontend/my-react-app/public/manifest.json
+++ b/frontend/my-react-app/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Jinsei.ai",
-  "name": "Jinsei.ai | Standards Based Financial Modeling and Process Management.",
+  "name": "Jinsei.ai | AI ERP Taxonomy Capture and Process Management.",
   "icons": [
     {
       "src": "favicon.png",
