--- a/frontend/my-react-app/package.json
+++ b/frontend/my-react-app/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "5.0.1",
     "react-syntax-highlighter": "^15.5.0",
     "react-xml-viewer": "^2.0.1",
+    "usehooks-ts": "^3.0.2",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
