--- a/frontend/my-react-app/package.json
+++ b/frontend/my-react-app/package.json
@@ -8,6 +8,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.16.4",
+    "react-icons": "^4.9.0",
     "@react-oauth/google": "^0.11.1",
     "@react-spring/web": "^9.7.3",
     "@testing-library/jest-dom": "^5.17.0",
