--- a/frontend/my-react-app/package.json
+++ b/frontend/my-react-app/package.json
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.1",
     "chonky": "^2.3.2",
+    "react-tooltip": "4.2.21",
     "chonky-icon-fontawesome": "^2.3.2",
     "dotenv": "^16.3.1",
     "file-saver": "^2.0.5",
