--- a/frontend/my-react-app/package.json
+++ b/frontend/my-react-app/package.json
@@ -68,6 +68,8 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "typescript": "5.5.4",
+    "@typescript-eslint/parser": "8.4.0"
   }
 }
