commented out backend

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     build:
       context: ./frontend/my-react-app
       dockerfile: Dockerfile
+    timeout: 600 
     ports:
       - "8080:80"
     networks:
